# cafe-adisyon

./: .gitignore  .npmrc  README.md  deps-tree.json  electron-builder.yml  electron.vite.config.1768946099362.mjs  electron.vite.config.1769176453082.mjs  electron.vite.config.1769390052687.mjs  electron.vite.config.1769458518214.mjs  electron.vite.config.1769751874074.mjs  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  prisma.config.ci.ts  prisma.config.ts  test-db.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts  vitest.config.ts  öneri app.tsx.txt
.github/workflows/: build.yml  release.yml
.storybook/: main.ts  preview.ts
@/components/ui/: dropdown-menu.tsx
prisma/: reset_orders.sql  schema.prisma
scripts/: prepare-for-build.js  publish-release.ts  reset-db.ts  soft-reset.ts
src-tauri/: Cargo.toml  check_output.txt  tauri.conf.json  test_output.txt
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  error.rs  lib.rs
src-tauri/src/commands/: admin.rs  categories.rs  dashboard.rs  expenses.rs  maintenance.rs  mod.rs  orders.rs  payments.rs  products.rs  reports.rs  tables.rs
src-tauri/src/entities/: activity_log.rs  app_settings.rs  category.rs  daily_summary.rs  expense.rs  mod.rs  monthly_report.rs  order.rs  order_item.rs  product.rs  table.rs  transaction.rs
src/main/: index.ts
src/main/db/: prisma.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/shared/: ipc-schemas.ts
src/stories/: Button.tsx  Header.tsx
(+142 files in other folders)
