[package]
name = "caffio"
version = "1.0.0"
description = "Caffio - Modern Cafe Management System"
authors = ["Baran"]
license = ""
repository = "https://github.com/baranyalcinn/cafe-adisyon"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

# ORM & Database
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
  "macros",
] }
tokio = { version = "1", features = ["full"] }

# TypeScript bindings (auto-generation)
specta = { version = "=2.0.0-rc.20", features = ["derive", "serde"] }
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7"] }
thiserror = "2"
tauri-plugin-dialog = "2.0.0-rc.0"
